adding test for postgres and Procfile for heroku

--- a/views/test.jade
+++ b/views/test.jade
@@ -5,3 +5,5 @@ block content
     h1= title
     p Welcome to #{title} - this is Jade
     p(ngCloak) Testing Angular. Hello {{ name || "there!" }}
+    h1 Postgres results
+    p results: #{result}
