added pusherjs, updated gitignore

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,4 +9,5 @@ html(lang="en",ng-app="testApp")
     block content
 
     script(src='/js/vendor/angular-1.2.21.min.js')
+    script(src='/js/vendor/pusher-2.2.min.js')
     script(src='/js/main.js')
