--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,5 +9,6 @@ html(lang="en",ng-app="testApp")
     block content
 
     script(src='/js/vendor/angular-1.2.21.min.js')
-    script(src='/js/vendor/pusher-2.2.min.js')
+    script(src='/socket.io/socket.io.js')
     script(src='/js/main.js')
+    script(src='/js/socket.js')
