replacing pusher with socket io and shuffling around

--- a/views/test.jade
+++ b/views/test.jade
@@ -7,3 +7,4 @@ block content
     p(ngCloak) Testing Angular. Hello {{ name || "there!" }}
     h1 Postgres results
     p results: #{result}
+    h2#testing
