--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,10 +5,12 @@ html(lang="en",ng-app="testApp")
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Raleway:700,300,500')
     link(rel='stylesheet', href='/stylesheets/vendor/toast.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+  header
   body.grid
     block content
 
     script(src='/js/vendor/angular-1.2.21.min.js')
     script(src='/socket.io/socket.io.js')
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='/js/main.js')
     script(src='/js/socket.js')
